--- a/libc/Makefile
+++ b/libc/Makefile
@@ -1,25 +1,28 @@
+# Target configuration
 DEFAULT_HOST!=../default-host.sh
-HOST?=DEFAULT_HOST
+HOST?=$(DEFAULT_HOST)
 HOSTARCH!=../target-triplet-to-arch.sh $(HOST)
-
-CFLAGS?=-O2 -g
-CPPFLAGS?=
-LDFLAGS?=
-LIBS?=
 
 DESTDIR?=
 PREFIX?=/usr/local
 EXEC_PREFIX?=$(PREFIX)
-INCLUDEDIR?=$(PREFIX)/include
 LIBDIR?=$(EXEC_PREFIX)/lib
+INCLUDEDIR?=$(PREFIX)/include
+
+ARCHDIR=arch/$(HOSTARCH)
+
+# Compiler flags
+CFLAGS?=-O2 -g
+CPPFLAGS?=
+LDFLAGS?=
+LIBS?=
 
 CFLAGS:=$(CFLAGS) -ffreestanding -Wall -Wextra
 CPPFLAGS:=$(CPPFLAGS) -D__is_libc -Iinclude
 LIBK_CFLAGS:=$(CFLAGS)
 LIBK_CPPFLAGS:=$(CPPFLAGS) -D__is_libk
 
-ARCHDIR=arch/$(HOSTARCH)
-
+# Include arch-specific stuff
 include $(ARCHDIR)/make.config
 
 CFLAGS:=$(CFLAGS) $(ARCH_CFLAGS)
@@ -27,6 +30,9 @@ CPPFLAGS:=$(CPPFLAGS) $(ARCH_CPPFLAGS)
 LIBK_CFLAGS:=$(LIBK_CFLAGS) $(KERNEL_ARCH_CFLAGS)
 LIBK_CPPFLAGS:=$(LIBK_CPPFLAGS) $(KERNEL_ARCH_CPPFLAGS)
 
+# Things to compile
+
+# Freestanding
 FREEOBJS=\
 $(ARCH_FREEOBJS) \
 stdio/printf.o \
@@ -40,6 +46,7 @@ string/memset.o \
 string/strlen.o \
 string/int_to_str.o \
 
+# Hosted
 HOSTEDOBJS=\
 $(ARCH_HOSTEDOBJS) \
 
@@ -47,6 +54,7 @@ OBJS=\
 $(FREEOBJS) \
 $(HOSTEDOBJS) \
 
+# LibK is freestanding, LibC is hosted.
 LIBK_OBJS=$(FREEOBJS:.o=.libk.o)
 
 #BINARIES=libc.a libk.a # Not ready for libc yet.
@@ -57,29 +65,37 @@ BINARIES=libk.a
 
 all: $(BINARIES)
 
+# Make hosted libs
 libc.a: $(OBJS)
 	$(AR) rcs $@ $(OBJS)
 
+# Make freestanding libs
 libk.a: $(LIBK_OBJS)
 	$(AR) rcs $@ $(LIBK_OBJS)
 
+# Compile hosted C
 .c.o:
 	$(CC) -MD -c $< -o $@ -std=gnu11 $(CFLAGS) $(CPPFLAGS)
 
+# Compile ASM (for hosted)
 .c.S:
 	$(CC) -MD -c $< -o $@ $(CFLAGS) $(CPPFLAGS)
 
+# Compile freestanding C
 .c.libk.o:
 	$(CC) -MD -c $< -o $@ -std=gnu11 $(LIBK_CFLAGS) $(LIBK_CPPFLAGS)
 
+# Compile C (for freestanding)
 .S.libk.o:
 	$(CC) -MD -c $< -o $@ $(LIBK_CFLAGS) $(LIBK_CPPFLAGS)
 
+# Clean
 clean:
 	rm -f $(BINARIES) *.a
 	rm -f $(OBJS) $(LIBK_OBJS) *.o */*.o */*/*.o
 	rm -f $(OBJS:.o=.d) $(LIBK_OBJS:.o=.d) *.d */*.d */*/*.d
 
+# Copy libs to destination dir.
 install: install-headers install-libs
 
 install-headers:
