Code cleanup and move cross compiler prefix inside directory

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -33,7 +33,8 @@ LIBS:=$(LIBS) $(KERNEL_ARCH_LIBS)
 # Things to compile
 KERNEL_OBJS=\
 $(KERNEL_ARCH_OBJS) \
-kernel/kernel.o
+kernel/kernel.o \
+kernel/physm_buddy.o \
 
 OBJS=\
 $(ARCHDIR)/crti.o \
